--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="testin1.html">First Page</a></li>
+          <li class="fork"><a href="index.html">First Page</a></li>
+          <li class="fork"><a href="testin1.html">Second Page</a></li>
         </nav>
       </div><!-- end header -->
 
@@ -28,8 +29,8 @@
 
       <section>
         <div id="title">
-          <h1>Testing</h1>
-          <p>this is for testing</p>
+          <h1>First Page</h1>
+          <p>This is first page</p>
           
         </div>
         
